# Stexatlaser

./: CMakeLists.txt  README.md  Stexatlaser.pro  resources.rc
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-project.yml  build-stex-linux.yml  build-stex-windows.yml  master-pull-request-merge-reaction.yml  push-reaction.yml
app/: CMakeLists.txt
app/src/: command.h  conversion.cpp  conversion.h  main.cpp  stex.cpp  stex.h
app/src/command/: c-compress.cpp  c-compress.h  c-decompress.cpp  c-decompress.h  c-dump.cpp  c-dump.h  c-pack.cpp  c-pack.h  c-unpack.cpp  c-unpack.h  command.cpp  command.h  tex-command.cpp  tex-command.h  untex-command.cpp  untex-command.h
app/src/klei/: k-atlas.cpp  k-atlas.h  k-atlaskey.cpp  k-atlaskey.h  k-tex-io.cpp  k-tex-io.h  k-tex.cpp  k-tex.h  k-xml.cpp  k-xml.h
cmake/module/Stex/: FetchLibSquish.cmake
lib/: QxC_static32_0-0-7-7_Qt_5-15-2.lib  QxC_static32_0-0-7-7_Qt_5-15-2d.lib  QxC_static64_0-0-6-6_Qt_5-15-2.lib  QxC_static64_0-0-7-2_Qt_5-15-2.lib  QxC_static64_0-0-7-4_Qt_5-15-2.lib  QxC_static64_0-0-7-5_Qt_5-15-2.lib  QxC_static64_0-0-7-6_Qt_5-15-2.lib  QxC_static64_0-0-7-7_Qt_5-15-2.lib
lib/Qx/x32/: QxC_static32_0-0-7-10_Qt_5-15-2.lib  QxC_static32_0-0-7-10_Qt_5-15-2d.lib
lib/Qx/x64/: QxC_static64_0-0-7-10_Qt_5-15-2.lib
lib/Squish/x32/: squish.lib  squishd.lib
lib/Squish/x64/: squish.lib  squishd.lib
src/: CMakeLists.txt  atlas.cpp  atlas.h  command.cpp  command.h  conversion.cpp  conversion.h  k_atlaskey.cpp  k_atlaskey.h  main.cpp  stex.cpp  stex.h  version.h
src/command/: c-pack.cpp  c-pack.h  c-unpack.cpp  c-unpack.h
src/klei/: k-atlas.cpp  k-atlas.h  k-atlaskey.cpp  k-atlaskey.h  k-tex-io.cpp  k-tex-io.h  k-tex.cpp  k-tex.h  k-xml.cpp  k-xml.h
